# chat_with_data

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/data/: manager.py
src/data/loaders/: __init__.py  arxiv_loader.py  base_loader.py
src/data/processors/: __init__.py  base_processor.py  metadata_processor.py  scientific_processor.py  text_processor.py
src/data/storage/: __init__.py  base_storage.py  document_store.py  storage_config.py  vector_store.py
src/data/validators/: __init__.py  base_validator.py  document_validatot.py  embedding_validator.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_manager.py  test_loaders.py  test_validators.py
